--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="https://www.mbclawacademy.com/">
                 <img src="bkash.jpg" >
                 <br/>
-                <span>ওমর ফারুক  ভাইয়ের ছাগল</span>
+                <span>Shop Management</span>
             </a>
             </li>
 
