--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             </li>
 
 			<li class="box">
-                <a href="https://www.mbclawacademy.com/">
-                <img src="hthttps://0l16i9j67o8nqn5k6kk80a-on.drv.tw/chagolerhat/unknown.jpg/v0/b/chagoler-hat.appspot.com/o/ic.jpg?alt=media&token=5eb62f39-4d15-4404-9731-dbeff4119c8c" >
+                <a href="https://access.page.link/shop">
+                <img src="bkash.jpg" >
                 <br/>
-                <span>কামাল ভাইয়ের ছাগল</span>
+                <span>Hospital Management</span>
             </a>
             </li>            
         </ul>     
