--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul class="grid" id="myList">
             
             <li class="box">
-                <a href="https://www.mbclawacademy.com/">
+                <a href="https://access.page.link/shop">
                 <img src="bkash.jpg" >
                 <br/>
                 <span>Shop Management</span>
