--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </a>
             </li>            
         </ul>     
-        <div class="category">অন্যান্য ছাগলের হাট</div>
+        <div class="category">Softwares</div>
         <ul class="grid" id="myList">
              <li class="box">
                 <a href="https://m.youtube.com/watch?v=eD3HhSKYCko">
