--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/5f8487ebf0e7167d00185966/default';
+s1.src='https://raw.githubusercontent.com/jakirsoftware/android/main/tawk.embed';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
