--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </li>
 			<li class="box">
                 <a href="https://www.mbclawacademy.com/">
-                <img src="https://firebasestorage.googleapis.com/v0/b/chagoler-hat.appspot.com/o/ic.jpg?alt=media&token=5eb62f39-4d15-4404-9731-dbeff4119c8c" >
+                <img src="https://access.page.link/chat" >
                 <br/>
                 <span>Facebook</span>
             </a>
