--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             </a>
         </li>
 			<li class="box">
-                <a href="https://www.mbclawacademy.com/">
+                <a href="https://access.page.link/chat">
                 <img src="https://access.page.link/chat" >
                 <br/>
-                <span>Facebook</span>
+                <span>Facebook1</span>
             </a>
         </li>            
         </ul>
